Adicionado autenticação com token JWT
- Implementada geração de token JWT
- Implementada validação de token
- Implementado filtro de para autenticação nas request
- Implementado filtro de para geração de token

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
 logging:
   level:
     org.springframework.security: DEBUG
+
+security:
+  jwt:
+    expiration: 10000 # 10 segundos
+    secret: "chaveSecreta"
