--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,3 @@
 spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:forum
-    username: sa
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-  h2:
-    console:
-      enabled: true
-
-logging:
-  level:
-    org.springframework.security: DEBUG
-
-security:
-  jwt:
-    expiration: 86400000 # 1 dia
-    secret: "chaveSecreta"
+  profiles:
+    active: dev
